src/test/resources/scripts/language/parser/invalid/cast/badIntCastStr.sbsc
// parser should error at invalid cast

int("2");

return false;